package com.theroyale.backend.model;

import jakarta.persistence.*;
import lombok.*;

import java.math.BigDecimal;
import java.time.LocalDateTime;
import java.util.ArrayList;
import java.util.List;

// ===== Modelo: la cuenta de consumo asociada a una reserva (1 a 1) =====
@Entity
@Table(name = "cuenta")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class Cuenta {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    // El "unique = true" en la columna FK es lo que en JPA convierte una relación
    // que técnicamente podría ser muchos-a-uno en una relación real 1 a 1.
    @OneToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "reserva_id", nullable = false, unique = true)
    private Reserva reserva;

    @Enumerated(EnumType.STRING)
    @Column(nullable = false, length = 20)
    private EstadoCuenta estado;

    @Column(nullable = false)
    private LocalDateTime fechaCreacion;

    @OneToMany(mappedBy = "cuenta", cascade = CascadeType.ALL, orphanRemoval = true)
    @Builder.Default
    @ToString.Exclude
    private List<ItemConsumo> itemsConsumo = new ArrayList<>();

    @OneToMany(mappedBy = "cuenta", cascade = CascadeType.ALL, orphanRemoval = true)
    @Builder.Default
    @ToString.Exclude
    private List<Pago> pagos = new ArrayList<>();

    // ===== Totales calculados (no se persisten: la entidad usa acceso por campo) =====
    public BigDecimal getTotalConsumos() {
        return itemsConsumo.stream()
                .map(ItemConsumo::getTotal)
                .reduce(BigDecimal.ZERO, BigDecimal::add);
    }

    public BigDecimal getTotalPagado() {
        return pagos.stream()
                .map(Pago::getMonto)
                .reduce(BigDecimal.ZERO, BigDecimal::add);
    }

    public BigDecimal getSaldo() {
        return getTotalConsumos().subtract(getTotalPagado());
    }

    @Override
    public String toString() {
        return "Cuenta{id=" + id + ", estado=" + estado + ", fechaCreacion=" + fechaCreacion + "}";
    }
}
