@startuml DiagramaER_TheRoyale

skinparam linetype ortho
hide circle
hide empty methods
hide empty members

' ==========================================================
' Entidades
' ==========================================================

entity Operador {
  * id : int <<PK>>
  --
  nombre : VARCHAR(100)
  email : VARCHAR(150) <<unique, not null>>
  password : VARCHAR(255)
  tipo : VARCHAR(20) <<check: OPERADOR>>
}

entity Cliente {
  * id : int <<PK>>
  --
  nombre : VARCHAR(100)
  apellido : VARCHAR(100)
  email : VARCHAR(150) <<unique, not null>>
  password : VARCHAR(255)
  telefono : VARCHAR(20)
  fecha_registro : DATE
}

entity Admin {
  * id : int <<PK>>
  --
  nombre : VARCHAR(100)
  email : VARCHAR(150) <<unique, not null>>
  password : VARCHAR(255)
}

entity TipoHabitacion {
  * id : int <<PK>>
  --
  nombre : VARCHAR(100) <<unique, not null>>
  descripcion : VARCHAR(500)
  imagen_url : VARCHAR(255)
}

entity Imagen {
  * id : int <<PK>>
  --
  # tipo_habitacion_id : int <<FK>>
  url : VARCHAR(255)
  orden : int
}

entity Habitacion {
  * id : int <<PK>>
  --
  # tipo_habitacion_id : int <<FK>>
  numero : VARCHAR(10) <<unique, not null>>
  precio : DECIMAL(10,2)
  estado : VARCHAR(20) <<check: DISPONIBLE|OCUPADA|DESHABILITADA|MANTENIMIENTO>>
}

entity Reserva {
  * id : int <<PK>>
  --
  # cliente_id : int <<FK -> Cliente.id>>
  # habitacion_id : int <<FK -> Habitacion.id>>
  fecha_inicio : DATE
  fecha_fin : DATE
  estado : VARCHAR(20) <<check: PENDIENTE|CONFIRMADA|CANCELADA|FINALIZADA>>
  cantidad_personas : int
  precio_noche_acordado : DECIMAL(10,2)
  fecha_creacion : TIMESTAMP
}

entity Cuenta {
  * id : int <<PK>>
  --
  # reserva_id : int <<FK, unique, not null>>
  estado : VARCHAR(20) <<check: ABIERTA|CERRADA>>
  fecha_creacion : TIMESTAMP
}

entity Servicio {
  * id : int <<PK>>
  --
  nombre : VARCHAR(100)
  descripcion : TEXT
  precio : DECIMAL(10,2)
  categoria : VARCHAR(50)
  activo : BOOLEAN
}

entity ItemConsumo {
  * id : int <<PK>>
  --
  # cuenta_id : int <<FK>>
  # servicio_id : int <<FK>>
  # operador_id : int <<FK -> Operador.id>>
  cantidad : int
  fecha_hora : TIMESTAMP
  precio_unitario : DECIMAL(10,2)
  pagado : BOOLEAN
}

entity Pago {
  * id : int <<PK>>
  --
  # cuenta_id : int <<FK>>
  # operador_id : int <<FK -> Operador.id, nullable>>
  monto : DECIMAL(10,2)
  fecha : TIMESTAMP
  metodo_pago : VARCHAR(30)
}

' ==========================================================
' Relaciones (notacion pata de gallo)
' ==========================================================

Cliente          ||--o{ Reserva            : realiza

TipoHabitacion   ||--o{ Habitacion         : clasifica
TipoHabitacion   ||--o{ Imagen             : tiene

Habitacion       ||--o{ Reserva            : es_reservada_en
Reserva          ||--||  Cuenta            : tiene

Cuenta           ||--o{ ItemConsumo        : contiene
Servicio         ||--o{ ItemConsumo        : corresponde_a
Operador          ||--o{ ItemConsumo        : registra

Cuenta           ||--o{ Pago               : recibe
Operador          |o--o{ Pago               : registra

Admin            }o..o{ TipoHabitacion     : administra
Admin            }o..o{ Habitacion         : administra
Admin            }o..o{ Servicio           : administra
Admin            }o..o{ Operador            : administra

@enduml
